syntax = "proto3";

option csharp_namespace = "DiscountService";

package DiscountCode;

service DiscountService {
  rpc GenerateCodes (GenerateCodesRequest) returns (GenerateCodesResponse);
  rpc UseCode (UseCodeRequest) returns (UseCodeResponse);
}

message GenerateCodesRequest {
  int32 count = 1;
}

message GenerateCodesResponse {
  bool success = 1;
  repeated string codes = 2;
  string error_message = 3;
}

message UseCodeRequest {
  string code = 1;
}

message UseCodeResponse {
  enum Status {
    SUCCESS = 0;
    NOT_FOUND = 1;
    ALREADY_USED = 2;
    CONCURRENCY_ERROR = 3;
  }
  Status status = 1;
  string message = 2;
}
